@@ -1,5 +1,17 @@
 2017-11-01  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/popup/popup.js:
+	Define showDetailsPage function.
+
+	* tryXpath/scripts/try_xpath_functions.js:
+	Define updateDetailsTable function.
+
+	* tryXpath/popup/popup.js:
+	Define prevDetailsPage, moveDetailsPage, detailsPageCount
+	and nextDetailsPage variables.
+	Rename. pageSize -> detailsPageSize
+	Rename. pageIndex -> detailsPageIndex
+
 	* tryXpath/popup/popup.html (Results):
 	Add some elements.
 
